--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,25 +1,33 @@
-.header  {
+.header {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .logo {
-  font-size: 48px;
-  font-weight: 900;
+  font-size: 32px;
+  font-weight: bold;
+  padding: 2px 16px;
+  margin: 8px;
   color: tomato;
   background: white;
-  padding: 4px 32px;
 }
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display: flex;
+  padding: 0px;
+  margin: 8px;
+  gap: 8px;
 }
 
 a {
   font-size: 22px;
   background: white;
-  padding: 8px;
+  padding: 4px;
   /* this removes the line under the links */
   text-decoration: none;
 }
